[ui] feat: 기본 레이아웃 및 회원가입/로그인
